demo-app/src/app/app.component.scss
@import "../_variables";

header {
  #{'/deep/'} {
    .side-nav {
      padding-bottom: 0;
    }

    .sidenav-background,
    .sidenav-button {
      background: #333333 !important;
    }

    .sidenav-button {
      position: fixed;
      top: 16px;
      right: 16px;
      z-index: 24;
    }
  }

  .sidenav-header {
    background: rgba(0,0,0,0.14);
    display: block;
    padding-top: 10px;

    a {
      height: auto;
    }
  }

  .angular-logo {
    display: block;
    margin: 0 auto;
    width: 150px;
  }

  .materialize-logo {
    display: block;
    margin: -62px auto 0;
  }

  .materialize-name {
    background: rgba(0,0,0,0.14);
    font-weight: 200;
    padding: 14px;
  }
}

main {
  margin-bottom: 2rem;
  margin-top: 2rem;

  @media #{$large-and-up} {
    padding-left: 300px;
  }

  .container {
    width: 90% !important;

    @media #{$large-and-up} {
      margin: 0 3%;
    }
  }
}

/* mCustomScrollbar override */

#{'/deep/'} {
  .mCSB_dragger_bar {
    width: 8px !important;
    border-radius: 0px !important;
  }

  .mCSB_scrollTools_vertical {
    margin-top: 4px !important;
    margin-bottom: 4px !important;
  }

  .mCustomScrollBox {
    padding-bottom: 30px;
  }
}

